# metahan

./: .gitignore  LICENSE  README.md  generate_folder.py  pyproject.toml  requirements.txt  structure.txt
configs/: circle_find_device.yaml  layout.yaml
configs/apertures/: circle.yaml  half_circle.yaml  rectangle.yaml  square.yaml
configs/examples/: demo_circle_on_half_circle.yaml  demo_cross_on_rectangle.yaml  demo_square_on_circle.yaml
configs/unit_cells/: circle.yaml  cross.yaml  ellipse.yaml  rectangle.yaml  ring.yaml  square.yaml  supercell.yaml  triangle.yaml
docs/: project_structure.md
scripts/: diagnose_gds.py
src/metahan/: __init__.py  cli.py
src/metahan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/metahan/apertures/: square.py
src/metahan/core/: lattice.py  metasurface.py
src/metahan/io/: config_loader.py  gds_writer.py
src/metahan/unit_cells/: cross.py  supercell.py
tests/: conftest.py
tests/test_apertures/: test_half_circle_aperture.py
tests/test_core/: test_builder.py
tests/test_io/: test_config_loader.py
tests/test_unit_cells/: test_builder.py  test_circle.py  test_metasurface.py  test_ring.py  test_supercell.py
